# AI-Capability-Signals

./: .gitignore  LICENSE  Makefile  README.md  THIRD_PARTY_DATA.md  index.html  pyproject.toml
appendix/: frontier_model_oracle.md
data/analysis/: analysis_manifest.csv  business_domain_ai_pressure.csv  capability_forecasts.csv  capability_frontier_history.csv  claim_failure_modes.csv  company_frontier_scores.csv  company_next_frontier_probabilities.csv  company_score_components.csv  company_score_methodology.csv  company_score_sensitivity.csv  counterintuitive_findings.csv  dashboard_key_findings.csv  deep_analysis_source_registry.csv  direct_model_price_performance.csv  domain_workflow_examples.csv  family_coverage_matrix.csv  forecast_claims.csv  forecast_input_diagnostics.csv  frontier_score_bootstrap.csv  historical_analogy_index.csv  job_exposure_scores.csv  job_replacement_feasibility.csv  labor_cluster_profiles.csv  labor_market_exposure_summary.csv  leadership_model_audit.csv  lmarena_category_leaders.csv  model_benchmark_match_audit.csv  open_closed_gap_by_category.csv  price_performance_frontier.csv  rank_stability_intervals.csv  (+7 more)
docs/: analysis_completion_roadmap.md  data_dictionary.md  data_policy.md  deep_analysis_data_dictionary.md  methodology.md  rich_dataset_examples.md
notebooks/: 01_exploration.ipynb  README.md
report/: deep_frontier_ai_forecast.html  deep_frontier_ai_forecast.md  frontier_ai_analysis.md
tests/: test_classification.py  test_data_contract.py  test_deep_analysis_contract.py  test_model_matching.py  test_report_contract.py
(+7 files in other folders)
