[project]
name = "ai-capability-signals"
version = "0.1.0"
description = "A reproducible analysis of frontier AI model capability signals, open-weight competition, prices, benchmarks, and labor exposure."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=15.0",
  "python-dateutil>=2.9",
  "pyyaml>=6.0",
  "requests>=2.31",
  "skyfield>=1.49",
  "tabulate>=0.9"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
